--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -1,4 +1,5 @@
 <nav class="sidebar" [ngClass]="{sidebarPushRight: isActive}">
+
     <div class="list-group">
         <!--<a routerLink="/dashboard" [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ 'Dashboard' | translate }}
@@ -6,16 +7,22 @@
         <a [routerLink]="['/taskconfig']" [routerLinkActive]="['router-link-active']" class="list-group-item" *ngIf="isAdmin">
             <i class="fa fa-fw fa-tasks"></i>&nbsp;{{ 'New Tasks' | translate }}
         </a>
+        <a [routerLink]="['/taskedit']" [routerLinkActive]="['router-link-active']" class="list-group-item" *ngIf="isAdmin">
+            <i class="fa fa-fw fa-pencil"></i>&nbsp;{{ 'Edit Tasks' | translate }}
+        </a>
         <a [routerLink]="['/updatetask']" [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-fw fa-edit"></i>&nbsp;{{ 'Update Tasks' | translate }}
         </a>
         <a [routerLink]="['/record']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+            <i class="fa fa-fw fa-book"></i>&nbsp;{{ 'Current Tasks' | translate }}
+        </a>
+        <a [routerLink]="['/tasksrecord']" [routerLinkActive]="['router-link-active']" class="list-group-item" *ngIf="isAdmin">
             <i class="fa fa-fw fa-database"></i>&nbsp;{{ 'Record' | translate }}
         </a>
-        <a [routerLink]="['/owner']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+        <a [routerLink]="['/owner']" [routerLinkActive]="['router-link-active']" class="list-group-item" *ngIf="isAdmin">
             <i class="fa fa-fw fa-users"></i>&nbsp;{{ 'Owner' | translate }}
         </a>
-        <a [routerLink]="['/divisions']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+        <a [routerLink]="['/divisions']" [routerLinkActive]="['router-link-active']" class="list-group-item" *ngIf="isAdmin">
             <i class="fa fa-fw fa-address-book"></i>&nbsp;{{ 'divisions' | translate }}
         </a>
 
@@ -83,4 +90,5 @@
             {{ 'More Theme' | translate }}
         </a>-->
     </div>
+
 </nav>
