--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -1,5 +1,7 @@
 <nav class="navbar navbar-expand-lg fixed-top">
-    <a class="navbar-brand" href="#">Umniah - FFM </a>
+    <img src="/assets/images/umniahlogo1.png" href="#">
+    <a class="navbar-brand" href="#">Umniah - ETT </a>
+
     <button class="navbar-toggler" type="button" (click)="toggleSidebar()">
       <span class="navbar-toggler-icon"></span> 
         <i class="fa fa-bars text-muted" aria-hidden="true"></i>
@@ -27,6 +29,6 @@
                     </a>
                 </div>
             </li>
-        </ul>-->
+        </ul>
     </div>
 </nav>
