--- a/src/app/layout/tasksrecord/tasksrecord.component.html
+++ b/src/app/layout/tasksrecord/tasksrecord.component.html
@@ -19,8 +19,8 @@
         </ng-container>
         <!-- Status Column -->
         <ng-container matColumnDef="statuscolor">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Status </mat-header-cell>
-            <mat-cell *matCellDef="let row"> <img src="{{row.statuscolor}}"> </mat-cell>
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Closing Status </mat-header-cell>
+            <mat-cell *matCellDef="let row"> {{row.statuscolor}} </mat-cell>
         </ng-container>
         <!-- Progress Column -->
         <ng-container matColumnDef="progress">
@@ -53,14 +53,8 @@
         </ng-container>
 
         <ng-container matColumnDef="myprogress">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Progress </mat-header-cell>
-            <mat-cell *matCellDef="let row">
-                <div class="progress">
-                    <div class="progress-bar progress-bar-danger progress-bar-striped" role="progressbar" aria-valuenow='90' aria-valuemin="0" aria-valuemax="100" [style.width.%]="row.myprogress">
-                        {{row.myprogress}}%
-                    </div>
-                </div>
-            </mat-cell>
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Closing Date </mat-header-cell>
+            <mat-cell *matCellDef="let row"> {{row.myprogress | date: 'dd/MM/yyyy'}} </mat-cell>
         </ng-container>
         <!--<ng-container matColumnDef="actiontaken">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Action Taken </mat-header-cell>
@@ -154,7 +148,7 @@
     <div class="col col-xs-12">
         <div class="card mb-12">
             <div class="card-header">
-                Selected Task History Details
+                Selected Task Details
             </div>
             <div class="card-body">
                 <div [@routerTransition]>
